updated boxLayout doc

--- a/doc/documentation.adoc
+++ b/doc/documentation.adoc
@@ -750,7 +750,8 @@ public:
     void setOffset(float offset);
 
 private:
-    virtual void transformChildren() override;
+    virtual void onDraw(sf::RenderTarget& target, sf::RenderStates states) const override;
+    virtual void onUpdateTransform() override;
     float mOffset;
 };
 ----
@@ -776,7 +777,8 @@ public:
     void setOffset(float offset);
 
 private:
-    virtual void transformChildren() override;
+    virtual void onDraw(sf::RenderTarget& target, sf::RenderStates states) const override;
+    virtual void onUpdateTransform() override;
     float mOffset;
 };
 ----
