--- a/doc/widgets/boxLayout.adoc
+++ b/doc/widgets/boxLayout.adoc
@@ -33,7 +33,8 @@ public:
     void setOffset(float offset);
 
 private:
-    virtual void transformChildren() override;
+    virtual void onDraw(sf::RenderTarget& target, sf::RenderStates states) const override;
+    virtual void onUpdateTransform() override;
     float mOffset;
 };
 ----
@@ -59,7 +60,8 @@ public:
     void setOffset(float offset);
 
 private:
-    virtual void transformChildren() override;
+    virtual void onDraw(sf::RenderTarget& target, sf::RenderStates states) const override;
+    virtual void onUpdateTransform() override;
     float mOffset;
 };
 ----
